--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <address class="page-contact">
           <ul class="contact-list list">
             <li class="contact-item">
-              <a class="force link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+              <a class="force flow link" href="mailto:info@devstudio.com">info@devstudio.com</a>
             </li>
             <li class="contact-item">
               <a class="force link" href="tel:+110001111111">+11 (000) 111-11-11</a>
@@ -466,58 +466,60 @@
     </main>
     <!-- FOOTER -->
     <footer class="footer-bg">
-      <div class="footer-content container">
-        <a href="./index.html" class="logo-footer link">Web<span class="logo-accent-footer">Studio</span></a>
-        <p class="footer-descriptions">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
-      </div>
-      <div class="slcial">
-        <p class="social-name">Social media</p>
-        <ul class="social-icon">
-          <li class="social-list-item">
-            <a href="" class="social-list-link">
-              <svg
-                class="social-list-icon"
-                aria-label="icon instagram"
-                width="24"
-                height="24" >
-                <use href="./images/icons.svg#icon-instagram-2"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="social-list-item">
-            <a href="" class="social-list-link">
-              <svg
-                class="social-list-icon"
-                aria-label="icon twitter"
-                width="24"
-                height="24" >
-                <use href="./images/icons.svg#icon-twitter-1"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="social-list-item">
-            <a href="" class="social-list-link">
-              <svg
-                class="social-list-icon"
-                aria-label="icon facebook"
-                width="24"
-                height="24" >
-                <use href="./images/icons.svg#icon-facebook-1"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="social-list-item">
-            <a href="" class="social-list-link">
-              <svg
-                class="social-list-icon"
-                aria-label="icon linkedin"
-                width="24"
-                height="24" >
-                <use href="./images/icons.svg#icon-linkedin-1"></use>
-              </svg>
-            </a>
-          </li>
-        </ul>
+      <div class="footer-container container">
+        <div class="footer-content">
+          <a href="./index.html" class="logo-footer link">Web<span class="logo-accent-footer">Studio</span></a>
+          <p class="footer-descriptions">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+        </div>
+        <div class="slcial">
+          <p class="social-name">Social media</p>
+          <ul class="social-icon">
+            <li class="social-list-item">
+              <a href="" class="social-list-link">
+                <svg
+                  class="social-list-icon"
+                  aria-label="icon instagram"
+                  width="24"
+                  height="24" >
+                  <use href="./images/icons.svg#icon-instagram-2"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-list-item">
+              <a href="" class="social-list-link">
+                <svg
+                  class="social-list-icon"
+                  aria-label="icon twitter"
+                  width="24"
+                  height="24" >
+                  <use href="./images/icons.svg#icon-twitter-1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-list-item">
+              <a href="" class="social-list-link">
+                <svg
+                  class="social-list-icon"
+                  aria-label="icon facebook"
+                  width="24"
+                  height="24" >
+                  <use href="./images/icons.svg#icon-facebook-1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-list-item">
+              <a href="" class="social-list-link">
+                <svg
+                  class="social-list-icon"
+                  aria-label="icon linkedin"
+                  width="24"
+                  height="24" >
+                  <use href="./images/icons.svg#icon-linkedin-1"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
     <!-- MODAL -->
