--- a/portfolio.html
+++ b/portfolio.html
@@ -20,10 +20,10 @@
             <a href="./index.html" class="logo link">Web<span class="logo-accent">Studio</span></a>
             <ul class="menu-list list">
               <li class="menu-item">
-                <a class="menu-link current link" href="./index.html" target="_blank" rel="noopener noreferrer">Studio</a>
+                <a class="menu-link link" href="./index.html" target="_blank" rel="noopener noreferrer">Studio</a>
               </li>
               <li class="menu-item">
-                <a class="menu-link link" href="./portfolio.html" target="_blank" rel="noopener noreferrer">Portfolio</a>
+                <a class="menu-link current link" href="./portfolio.html" target="_blank" rel="noopener noreferrer">Portfolio</a>
               </li>
               <li class="menu-item">
                 <a class="menu-link link" href="" target="_blank" rel="noopener noreferrer">Contacts</a>
@@ -49,11 +49,11 @@
             <div class="container">
                 <h1 class="heder-title visually-hidden">Portfolio for Your Business</h1>
                 <ul class="menu-filter-list list">
-                    <li class="menu-filter-item"><button class="menu-filter-btn" type="button"><a href="filter-btn-link">All</a></button></li>
-                    <li class="menu-filter-item"><button class="menu-filter-btn" type="button"><a href="filter-btn-link">Web Site</a></button></li>
-                    <li class="menu-filter-item"><button class="menu-filter-btn" type="button"><a href="filter-btn-link">App</a></button></li>
-                    <li class="menu-filter-item"><button class="menu-filter-btn" type="button"><a href="filter-btn-link">Design</a></button></li>
-                    <li class="menu-filter-item"><button class="menu-filter-btn" type="button"><a href="filter-btn-link">Marketing</a></button></li>
+                    <li class="menu-filter-item"><button class="menu-filter-btn" type="button"><a href="" class="filter-btn-link">All</a></button></li>
+                    <li class="menu-filter-item"><button class="menu-filter-btn" type="button"><a href="" class="filter-btn-link">Web Site</a></button></li>
+                    <li class="menu-filter-item"><button class="menu-filter-btn" type="button"><a href="" class="filter-btn-link">App</a></button></li>
+                    <li class="menu-filter-item"><button class="menu-filter-btn" type="button"><a href="" class="filter-btn-link">Design</a></button></li>
+                    <li class="menu-filter-item"><button class="menu-filter-btn" type="button"><a href="" class="filter-btn-link">Marketing</a></button></li>
                 </ul>
                 <!-- SECTION-2 -->
                 <ul class="cards-product-list list">
@@ -171,59 +171,72 @@
     </main>
     <!-- FOOTER -->
     <footer class="footer-bg">
-        <div class="footer-content container">
-          <a href="./index.html" class="logo-footer link">Web<span class="logo-accent-footer">Studio</span></a>
-          <p class="footer-descriptions">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+        <div class="footer-container container">
+          <div class="footer-content">
+            <a href="./index.html" class="logo-footer link">Web<span class="logo-accent-footer">Studio</span></a>
+            <p class="footer-descriptions">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+          </div>
+          <div class="slcial">
+            <p class="social-name">Social media</p>
+            <ul class="social-icon">
+              <li class="social-list-item">
+                <a href="" class="social-list-link">
+                  <svg
+                    class="social-list-icon"
+                    aria-label="icon instagram"
+                    width="24"
+                    height="24" >
+                    <use href="./images/icons.svg#icon-instagram-2"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="social-list-item">
+                <a href="" class="social-list-link">
+                  <svg
+                    class="social-list-icon"
+                    aria-label="icon twitter"
+                    width="24"
+                    height="24" >
+                    <use href="./images/icons.svg#icon-twitter-1"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="social-list-item">
+                <a href="" class="social-list-link">
+                  <svg
+                    class="social-list-icon"
+                    aria-label="icon facebook"
+                    width="24"
+                    height="24" >
+                    <use href="./images/icons.svg#icon-facebook-1"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="social-list-item">
+                <a href="" class="social-list-link">
+                  <svg
+                    class="social-list-icon"
+                    aria-label="icon linkedin"
+                    width="24"
+                    height="24" >
+                    <use href="./images/icons.svg#icon-linkedin-1"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
         </div>
-        <div class="slcial">
-          <p class="social-name">Social media</p>
-          <ul class="social-icon">
-            <li class="social-list-item">
-              <a href="" class="social-list-link">
-                <svg
-                  class="social-list-icon"
-                  aria-label="icon instagram"
-                  width="24"
-                  height="24" >
-                  <use href="./images/icons.svg#icon-instagram-2"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="social-list-item">
-              <a href="" class="social-list-link">
-                <svg
-                  class="social-list-icon"
-                  aria-label="icon twitter"
-                  width="24"
-                  height="24" >
-                  <use href="./images/icons.svg#icon-twitter-1"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="social-list-item">
-              <a href="" class="social-list-link">
-                <svg
-                  class="social-list-icon"
-                  aria-label="icon facebook"
-                  width="24"
-                  height="24" >
-                  <use href="./images/icons.svg#icon-facebook-1"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="social-list-item">
-              <a href="" class="social-list-link">
-                <svg
-                  class="social-list-icon"
-                  aria-label="icon linkedin"
-                  width="24"
-                  height="24" >
-                  <use href="./images/icons.svg#icon-linkedin-1"></use>
-                </svg>
-              </a>
-            </li>
-          </ul>
+      </footer>
+      <!-- MODAL -->
+      <div class="backdrop is-hidden" data-modal>
+        <div class="modal">
+          <button type="button" class="modal-close-btn" data-modal-close>
+            <svg class="modal-icon-close" width="8" height="8">
+              <use href="./images/icons.svg#icon-person-black-18dp"></use>
+            </svg>
+          </button>
         </div>
-    </footer>
+      </div>
+    <script src="./js/modal.js"></script>
 </body>
 </html>
