--- a/portfolio.html
+++ b/portfolio.html
@@ -33,10 +33,10 @@
           <address class="page-contact">
             <ul class="contact-list list">
               <li class="contact-item">
-                <a class="force link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                <a class="force flow link" href="mailto:info@devstudio.com">info@devstudio.com</a>
               </li>
               <li class="contact-item">
-                <a class="force link" href="tel:+110001111111">+11 (000) 111-11-11</a>
+                <a class="force flow link" href="tel:+110001111111">+11 (000) 111-11-11</a>
               </li>
             </ul>
           </address>
@@ -49,11 +49,11 @@
             <div class="container">
                 <h1 class="heder-title visually-hidden">Portfolio for Your Business</h1>
                 <ul class="menu-filter-list list">
-                    <li class="menu-filter-item"><button class="menu-filter-btn" type="button"><a href="" class="filter-btn-link">All</a></button></li>
-                    <li class="menu-filter-item"><button class="menu-filter-btn" type="button"><a href="" class="filter-btn-link">Web Site</a></button></li>
-                    <li class="menu-filter-item"><button class="menu-filter-btn" type="button"><a href="" class="filter-btn-link">App</a></button></li>
-                    <li class="menu-filter-item"><button class="menu-filter-btn" type="button"><a href="" class="filter-btn-link">Design</a></button></li>
-                    <li class="menu-filter-item"><button class="menu-filter-btn" type="button"><a href="" class="filter-btn-link">Marketing</a></button></li>
+                    <li class="menu-filter-item"><button class="menu-filter-btn" type="button"><a class="filter-btn-link" href="">All</a></button></li>
+                    <li class="menu-filter-item"><button class="menu-filter-btn" type="button"><a class="filter-btn-link" href="">Web Site</a></button></li>
+                    <li class="menu-filter-item"><button class="menu-filter-btn" type="button"><a class="filter-btn-link" href="">App</a></button></li>
+                    <li class="menu-filter-item"><button class="menu-filter-btn" type="button"><a class="filter-btn-link" href="">Design</a></button></li>
+                    <li class="menu-filter-item"><button class="menu-filter-btn" type="button"><a class="filter-btn-link" href="">Marketing</a></button></li>
                 </ul>
                 <!-- SECTION-2 -->
                 <ul class="cards-product-list list">
