--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
               <a class="force flow link" href="mailto:info@devstudio.com">info@devstudio.com</a>
             </li>
             <li class="contact-item">
-              <a class="force link" href="tel:+110001111111">+11 (000) 111-11-11</a>
+              <a class="force flow link" href="tel:+110001111111">+11 (000) 111-11-11</a>
             </li>
           </ul>
         </address>
