--- a/portfolio.html
+++ b/portfolio.html
@@ -49,11 +49,11 @@
             <div class="container">
                 <h1 class="heder-title visually-hidden">Portfolio for Your Business</h1>
                 <ul class="menu-filter-list list">
-                    <li class="menu-filter-item"><button class="menu-filter-btn" type="button"><a class="filter-btn-link" href="#">All</a></button></li>
-                    <li class="menu-filter-item"><button class="menu-filter-btn" type="button"><a class="filter-btn-link" href="#">Web Site</a></button></li>
-                    <li class="menu-filter-item"><button class="menu-filter-btn" type="button"><a class="filter-btn-link" href="#">App</a></button></li>
-                    <li class="menu-filter-item"><button class="menu-filter-btn" type="button"><a class="filter-btn-link" href="#">Design</a></button></li>
-                    <li class="menu-filter-item"><button class="menu-filter-btn" type="button"><a class="filter-btn-link" href="#">Marketing</a></button></li>
+                    <li class="menu-filter-item"><button class="menu-filter-btn filter-btn-link" type="button">All</button></li>
+                    <li class="menu-filter-item"><button class="menu-filter-btn filter-btn-link" type="button">Web Site</button></li>
+                    <li class="menu-filter-item"><button class="menu-filter-btn filter-btn-link" type="button">App</button></li>
+                    <li class="menu-filter-item"><button class="menu-filter-btn filter-btn-link" type="button">Design</button></li>
+                    <li class="menu-filter-item"><button class="menu-filter-btn filter-btn-link" type="button">Marketing</button></li>
                 </ul>
                 <!-- SECTION-2 -->
                 <ul class="cards-product-list list">
