--- a/portfolio.html
+++ b/portfolio.html
@@ -49,11 +49,11 @@
             <div class="container">
                 <h1 class="heder-title visually-hidden">Portfolio for Your Business</h1>
                 <ul class="menu-filter-list list">
-                    <li class="menu-filter-item"><button class="menu-filter-btn filter-btn-link" type="button">All</button></li>
-                    <li class="menu-filter-item"><button class="menu-filter-btn filter-btn-link" type="button">Web Site</button></li>
-                    <li class="menu-filter-item"><button class="menu-filter-btn filter-btn-link" type="button">App</button></li>
-                    <li class="menu-filter-item"><button class="menu-filter-btn filter-btn-link" type="button">Design</button></li>
-                    <li class="menu-filter-item"><button class="menu-filter-btn filter-btn-link" type="button">Marketing</button></li>
+                    <li class="menu-filter-item"><button class="menu-filter-btn" type="button">All</button></li>
+                    <li class="menu-filter-item"><button class="menu-filter-btn" type="button">Web Site</button></li>
+                    <li class="menu-filter-item"><button class="menu-filter-btn" type="button">App</button></li>
+                    <li class="menu-filter-item"><button class="menu-filter-btn" type="button">Design</button></li>
+                    <li class="menu-filter-item"><button class="menu-filter-btn" type="button">Marketing</button></li>
                 </ul>
                 <!-- SECTION-2 -->
                 <ul class="cards-product-list list">
@@ -171,62 +171,62 @@
     </main>
     <!-- FOOTER -->
     <footer class="footer-bg">
-        <div class="footer-container container">
-          <div class="footer-content">
-            <a href="./index.html" class="logo-footer link">Web<span class="logo-accent-footer">Studio</span></a>
-            <p class="footer-descriptions">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
-          </div>
-          <div class="slcial">
-            <p class="social-name">Social media</p>
-            <ul class="social-icon">
-              <li class="social-list-item">
-                <a href="" class="social-list-link">
-                  <svg
-                    class="social-list-icon"
-                    aria-label="icon instagram"
-                    width="24"
-                    height="24" >
-                    <use href="./images/icons.svg#icon-instagram-2"></use>
-                  </svg>
-                </a>
-              </li>
-              <li class="social-list-item">
-                <a href="" class="social-list-link">
-                  <svg
-                    class="social-list-icon"
-                    aria-label="icon twitter"
-                    width="24"
-                    height="24" >
-                    <use href="./images/icons.svg#icon-twitter-1"></use>
-                  </svg>
-                </a>
-              </li>
-              <li class="social-list-item">
-                <a href="" class="social-list-link">
-                  <svg
-                    class="social-list-icon"
-                    aria-label="icon facebook"
-                    width="24"
-                    height="24" >
-                    <use href="./images/icons.svg#icon-facebook-1"></use>
-                  </svg>
-                </a>
-              </li>
-              <li class="social-list-item">
-                <a href="" class="social-list-link">
-                  <svg
-                    class="social-list-icon"
-                    aria-label="icon linkedin"
-                    width="24"
-                    height="24" >
-                    <use href="./images/icons.svg#icon-linkedin-1"></use>
-                  </svg>
-                </a>
-              </li>
-            </ul>
-          </div>
+      <div class="footer-container container">
+        <div class="footer-content">
+          <a href="./index.html" class="logo-footer link">Web<span class="logo-accent-footer">Studio</span></a>
+          <p class="footer-descriptions">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
         </div>
-      </footer>
+        <div class="slcial">
+          <p class="social-name">Social media</p>
+          <ul class="social-icon">
+            <li class="social-list-item">
+              <a href="" class="social-list-link">
+                <svg
+                  class="social-list-icon"
+                  aria-label="icon instagram"
+                  width="24"
+                  height="24" >
+                  <use href="./images/icons.svg#icon-instagram-2"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-list-item">
+              <a href="" class="social-list-link">
+                <svg
+                  class="social-list-icon"
+                  aria-label="icon twitter"
+                  width="24"
+                  height="24" >
+                  <use href="./images/icons.svg#icon-twitter-1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-list-item">
+              <a href="" class="social-list-link">
+                <svg
+                  class="social-list-icon"
+                  aria-label="icon facebook"
+                  width="24"
+                  height="24" >
+                  <use href="./images/icons.svg#icon-facebook-1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-list-item">
+              <a href="" class="social-list-link">
+                <svg
+                  class="social-list-icon"
+                  aria-label="icon linkedin"
+                  width="24"
+                  height="24" >
+                  <use href="./images/icons.svg#icon-linkedin-1"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </footer>
       <!-- MODAL -->
       <div class="backdrop is-hidden" data-modal>
         <div class="modal">
