update styles.css index.html portfolio.html

--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
         <div class="customers-block container">
           <h2 class="customers-block-text">Customers</h2>
           <ul class="customers-list">
-            <li class="customers-item">
+            <li class="customers-item customers-item-1">
               <a
               class="customers-link"
               href=""
