--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
         <div class="customers-block container">
           <h2 class="customers-block-text">Customers</h2>
           <ul class="customers-list">
-            <li class="customers-list-item">
+            <li class="customers-list-item cut">
               <a
               class="customers-link"
               href=""
@@ -382,7 +382,7 @@
                 </svg>
               </a>
             </li>
-            <li class="customers-list-item">
+            <li class="customers-list-item cut">
               <a
               class="customers-link"
               href=""
@@ -395,7 +395,7 @@
                 </svg>
               </a>
             </li>
-            <li class="customers-list-item">
+            <li class="customers-list-item cut">
               <a
               class="customers-link"
               href=""
@@ -408,7 +408,7 @@
                 </svg>
               </a>
             </li>
-            <li class="customers-list-item">
+            <li class="customers-list-item cut">
               <a
               class="customers-link"
               href=""
@@ -421,7 +421,7 @@
                 </svg>
               </a>
             </li>
-            <li class="customers-list-item">
+            <li class="customers-list-item cut">
               <a
               class="customers-link"
               href=""
@@ -434,7 +434,7 @@
                 </svg>
               </a>
             </li>
-            <li class="customers-list-item">
+            <li class="customers-list-item cut">
               <a
               class="customers-link"
               href=""
@@ -447,7 +447,7 @@
                 </svg>
               </a>
             </li>
-            <li class="customers-list-item">
+            <li class="customers-list-item cut">
               <a
               class="customers-link"
               href=""
